# gemfitcom

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs-zh.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: example_community.yaml  example_strain.yaml
data/examples/: SOURCE.md  toy_acetogen.xml  toy_acetogen_hplc.csv  toy_acetogen_od.csv
data/examples/realistic/: B_infantis_GMC_hplc.csv  B_infantis_GMC_od.csv  SOURCE.md
docs/: index.md  install.md  methods.md  quickstart.md
docs/api/: gapfill.md  interactions.md  io.md  kinetics.md  medium.md  preprocess.md  simulate.md  utils.md  viz.md
docs/superpowers/plans/: 2026-05-05-spatial-dfba-pr1-numerical-core.md  2026-05-11-spatial-dfba-pr2-kinetics-reaction.md
docs/superpowers/specs/: 2026-05-05-spatial-dfba-v0.1-design.md
docs/zh/: index.md  install.md  methods.md  quickstart.md
docs/zh/api/: gapfill.md  interactions.md  io.md  kinetics.md  medium.md  preprocess.md  simulate.md  utils.md  viz.md
examples/spatial/ecoli_fprau_skeleton/: README.md  sim.yaml
examples/spatial/ecoli_fprau_skeleton/kinetics/: ecoli.yaml  fprau.yaml
scripts/: build_example_data.py  fetch_realistic_example.py
src/gemfitcom/: __init__.py  cli.py
src/gemfitcom/data/: __init__.py
src/gemfitcom/data/gapfill_kb/: __init__.py  scfa.yaml
src/gemfitcom/gapfill/: __init__.py  apply.py  detect.py  knowledge.py  report.py  run.py
src/gemfitcom/interactions/: __init__.py  biomass.py  competition.py  cross_feeding.py  network.py  panel.py
src/gemfitcom/io/: __init__.py  config.py  hplc.py  models.py  od.py
src/gemfitcom/kinetics/: __init__.py  fit.py  mm.py  mono_dfba.py
src/gemfitcom/medium/: __init__.py  constraints.py  medium.py  registry.py
src/gemfitcom/preprocess/: __init__.py  growth.py  hplc.py  od.py
src/gemfitcom/simulate/: __init__.py  _shared.py  fusion.py  micom.py  sequential_dfba.py
src/gemfitcom/spatial/: __init__.py  _init_fields.py  backends.py  config.py  diffusion.py  geometry.py  kinetics.py  reaction.py  recorder.py  state.py
src/gemfitcom/utils/: __init__.py  progress.py  solver.py
src/gemfitcom/viz/: __init__.py  growth_curve.py  interaction_network.py  kinetics_heatmap.py
tests/: conftest.py  test_cli.py  test_gapfill_apply.py  test_gapfill_detect.py  test_gapfill_knowledge.py  test_gapfill_run.py  test_interactions_competition.py  test_interactions_cross_feeding.py  test_interactions_network.py  test_interactions_panel.py  test_io_config.py  test_io_hplc.py  test_io_models.py  test_io_od.py  test_kinetics_fit.py  test_kinetics_mm.py  test_kinetics_mono_dfba.py  test_medium_constraints.py  test_medium_registry.py  test_preprocess_growth.py  test_preprocess_hplc.py  test_preprocess_od.py  test_simulate_fusion.py  test_simulate_micom.py  test_simulate_sequential_dfba.py  test_solver.py  test_utils_progress.py  test_viz.py
tests/spatial/: conftest.py  test_config.py  test_diffusion.py  test_geometry.py  test_init_fields.py  test_invariant_mass_conservation.py  test_invariant_positivity.py  test_kinetics.py  test_public_api.py  test_reaction_e2e.py  test_reaction_serial.py  test_recorder.py  test_state.py
(+2 files in other folders)
